# glib-serde

./: Cargo.toml  README.md
src/: any.rs  any_variant.rs  error.rs  lib.rs  macros.rs  pretty.rs  serialized.rs  util.rs  variant_dict.rs  variant_type.rs
src/any_variant/: deserializer.rs  mod.rs  serializer.rs
src/variant/: deserializer.rs  mod.rs
tests/: any.rs  enums.rs  variant.rs  variant_type.rs
