[package]
name = "glib-serde"
version = "0.1.0"
edition = "2021"

[dependencies]
glib-serde-derive = { path = "glib-serde-derive", optional = true }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
serde = "1"

[dev-dependencies]
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["derive"]
derive = ["glib-serde-derive"]

[workspace]
members = ["glib-serde-derive"]
